# tclmeasure

./: .gitignore  Makefile.in  README.md  configure  configure.ac  pkgIndex.tcl.in  tclmeasure.tcl
autom4te.cache/: output.0  requests  traces.0
docs/: .buildinfo  doc_gen.tcl  genindex.html  index-docindex.html  index-tclmeasure.html  index.html  objects.inv  search.html  searchindex.js  startPage.ruff  tclmeasure-tclmeasure.html  tclmeasure-tclmeasure.n  tclmeasure.html  tclmeasure.n
generic/: tclmeasure.c  tclmeasure.h
test/: all.tcl  tclmeasure.test
